--- a/taco-cloud/src/main/resources/templates/orderForm.html
+++ b/taco-cloud/src/main/resources/templates/orderForm.html
@@ -31,5 +31,8 @@
 		</label> <input type="text" th:field="*{ccCVV}" /> <br /> <input
 			type="submit" value="Submit order" />
 	</form>
+	<form method="POST" th:action="@{/logout}">
+		<input type="submit" value="Logout"/>
+	</form>
 </body>
 </html>
